# wlmaker

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  RELEASE.md  STYLE.md  build-cscope-index.sh  flatpak.wlmaker.yml  iwyu-mappings.imp  libcairo-fontconfig.supp  libdrm.supp  libgallium.supp  valgrind.md
.github/workflows/: build-for-bookworm-wlroots-018.yml  build-for-debian-bookworm.yml  build-for-debian-forky.yml  build-for-debian-trixie-wlr019.yml  build-for-debian-trixie-wlr020.yml  build-for-debian-trixie.yml  build-for-fedora41.yml  build-for-freebsd.yml  build-for-linux.yml  build-for-opensuse-tumbleweed.yml  build_and_upload_artifact.yml  cmake-single-platform.yml  package-release.yml  publish-doc.yml
Templates/: TEMPLATE.c  TEMPLATE.c.tpl  TEMPLATE.h  TEMPLATE.h.tpl
apps/: CMakeLists.txt  example_toplevel.c  wlclient.c  wlclient.h  wlm_graph_shared.c  wlm_graph_shared.h  wlm_graph_utildefines.h  wlmbattery.c  wlmclock.c  wlmcpugraph.c  wlmeyes.c  wlmmemgraph.c  wlmnetgraph.c
apps/libwlclient/: CMakeLists.txt  buffer.c  buffer.h  client.c  dblbuf.c  dblbuf.h  icon.c  icon.h  libwlclient.h  xdg_toplevel.c  xdg_toplevel.h
apps/primitives/: CMakeLists.txt  primitives.c  primitives.h  segment_display.c  segment_display.h  segment_display_test.c
cmake/: EmbedBinary.cmake  WaylandProtocol.cmake  embed.cmake.in  embed_binary.c.in  embed_binary.h.in
dependencies/: CMakeLists.txt  xwayland.pc
doc/: BUILD.md  CMakeLists.txt  Doxyfile.in  FEATURES.md  ROADMAP.md  RUN.md  commandline.md  config.md  keyboard-sync-plan.md  manual.css  manual.md  protocols.md  root_menu.md
etc/: CMakeLists.txt  Config.plist  ExampleConfig.plist  RootMenu.plist  RootMenuDebian.plist.in  State.plist  default-style.plist  dock.plist  root-menu-debian.plist.in  root-menu.plist  style-debian.plist  style-default.plist  style-furball.plist  style.plist  wlmaker-example.plist  wlmaker-home.plist  wlmaker-state.plist  wlmaker.plist
etc/Themes/: Debian.plist  Default.plist
examples/: CMakeLists.txt  README.md  example_layer_surface.c  example_toplevel.c
icons/: CMakeLists.txt  README.md
include/backend/: backend.h  output.h  output_config.h  output_manager.h
include/toolkit/: base.h  bordered.h  box.h  buffer.h  button.h  container.h  content.h  desktop.h  dock.h  element.h  env.h  fsm.h  gfxbuf.h  image.h  input.h  layer.h  lock.h  menu.h  menu_item.h  output_tracker.h  pane.h  panel.h  popup.h  primitives.h  rectangle.h  resizebar.h  resizebar_area.h  root.h  style.h  surface.h  test.h  tile.h  titlebar.h  titlebar_button.h  titlebar_title.h  toolkit.h  util.h  window.h  window2.h  workspace.h
protocols/: CMakeLists.txt  ext-input-observation-v1.xml  input-observation-v1.xml  input-observer-v1.xml  wlmaker-icon-unstable-v1.xml  wlmaker-pointer-position-v1.xml  wlmaker-pointer-tracking-v1.xml  wlmaker-position-tracking-v1.xml  wlmaker-toplevel-icon-unstable-v1.xml
share/: CMakeLists.txt  io.github.phkaeser.wlmaker.desktop.in  org.wlmaker.wlmaker.metainfo.xml  wlmaker.desktop.in  wlmaker.wlmbattery.desktop.in  wlmaker.wlmcpugraph.desktop.in  wlmaker.wlmmemgraph.desktop.in  wlmaker.wlmnetgraph.desktop.in  wlmclock.desktop.in  wlmeyes.desktop.in  wrap-wlmaker.sh.in
share/Themes/: DebianDouble.plist  DebianLarger.plist  Default.plist
share/wlmaker/icons/: README.md
src/: CMakeLists.txt  action.c  action.h  action_item.c  action_item.h  background.c  background.h  backtrace.c  backtrace.h  button.c  button.h  cairo_util.c  cairo_util.h  clip.c  clip.h  config.c  config.h  corner.c  corner.h  cursor.c  cursor.h  decorations.c  decorations.h  dock.c  dock.h  dock_app.c  dock_app.h  files.c  files.h  icon_manager.c  icon_manager.h  iconified.c  iconified.h  idle.c  idle.h  input_observation.c  input_observation.h  input_observer.c  input_observer.h  interactive.c  (+88 more)
src/backend/: CMakeLists.txt  backend.c  backend.h  output.c  output_config.c  output_manager.c  output_manager.h
src/conf/: CMakeLists.txt  analyzer.l  conf.md  conf_test.c  decode.c  decode.h  grammar.y  model.c  model.h  parser.h  parser.y  plist.c  plist.h  scanner.l
src/decorations/: CMakeLists.txt  element.c  element.h  margin.c  margin.h  resizebar.c  resizebar.h  titlebar.c  titlebar.h  window_decorations.c  window_decorations.h
src/desktop-parse/: CMakeLists.txt  README.md  desktop_parse.c  parse.c  parse.h  parse_test.c
src/desktop-parser/: desktop-parser.c  desktop-parser.h
src/dock/: CMakeLists.txt  dock.c  dock.h  launcher.c  launcher.h  tilebox.c  tilebox.h  wlmdock.c
src/input/: CMakeLists.txt  cursor.c  cursor.h  keyboard.c  keyboard.h  manager.c  manager.h  pointer.c  pointer.h
src/toolkit/: CMakeLists.txt  base.c  bordered.c  bordered.h  box.c  box.h  buffer.c  buffer.h  button.c  button.h  container.c  container.h  content.c  content.h  desktop.c  dock.c  dock.h  element.c  element.h  env.c  env.h  fsm.c  fsm.h  gfxbuf.c  gfxbuf.h  image.c  image.h  input.c  input.h  layer.c  layer.h  lock.c  lock.h  menu.c  menu.h  menu_item.c  menu_item.h  output_tracker.c  pane.c  pane.h  (+50 more)
src/util/: CMakeLists.txt  backtrace.c  backtrace.h  files.c  files.h  subprocess_monitor.c  subprocess_monitor.h
src/wlclient/: CMakeLists.txt  dblbuf.c  dblbuf.h  icon.c  icon.h  layer_surface.c  layer_surface.h  wlclient.c  wlclient.h  xdg_toplevel.c  xdg_toplevel.h
submodules/: CMakeLists.txt
testdata/conf/: array.plist  dict.plist  string.plist
tests/: CMakeLists.txt  backend_test.c  desktop_parser_test.c  input_test.c  toolkit_test.c  util_test.c  wlmaker_test.c  wlmdock_test.c  wlmtool_test.c
tests/data/: keyboard  menu-generate.plist  menu-include.plist  menu.plist  wlmaker.desktop
tests/data/Themes/: theme1.plist  theme2.plist
tests/data/input/: cursor-index.theme
tool/: CMakeLists.txt  gen_menu.c  gen_menu.h  item.c  item.h  menu.c  menu.h  wlmtool.c
tool/desktop-parser/: CMakeLists.txt  README.md  desktop-parser.c  desktop-parser.h
